deploy/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simpwatch-db
  namespace: simpwatch
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: simpwatch-db
---
apiVersion: v1
kind: Service
metadata:
  name: simpwatch-redis
  namespace: simpwatch
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: simpwatch-redis
---
apiVersion: v1
kind: Service
metadata:
  name: simpwatch-web
  namespace: simpwatch
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: simpwatch-web
